get election 95% complete, no test
