# server/swagger_server/models/option_results.py
@@ -10,33 +10,37 @@ from swagger_server.models.option import Option  # noqa: F401,E501
 from swagger_server import util
 
 
-class OptionResults(Model):
+class OptionResults(Option):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
-    def __init__(self, option: Option=None, total_votes_for: float=None, vote_proportion_percent: float=None):  # noqa: E501
+    def __init__(self, option_id: int=None, option_description: str=None, total_votes_for: float=None, vote_proportion_percent: float=None):  # noqa: E501
         """OptionResults - a model defined in Swagger
 
-        :param option: The option of this OptionResults.  # noqa: E501
-        :type option: Option
+        :param option_id: The option_id of this OptionResults.  # noqa: E501
+        :type option_id: int
+        :param option_description: The option_description of this OptionResults.  # noqa: E501
+        :type option_description: str
         :param total_votes_for: The total_votes_for of this OptionResults.  # noqa: E501
         :type total_votes_for: float
         :param vote_proportion_percent: The vote_proportion_percent of this OptionResults.  # noqa: E501
         :type vote_proportion_percent: float
         """
+        Option.__init__(self, option_id, option_description )
         self.swagger_types = {
-            'option': Option,
+            'option_id': int,
+            'option_description': str,
             'total_votes_for': float,
             'vote_proportion_percent': float
         }
 
         self.attribute_map = {
-            'option': 'option',
+            'option_id': 'option_id',
+            'option_description': 'option_description',
             'total_votes_for': 'total_votes_for',
             'vote_proportion_percent': 'vote_proportion_percent'
         }
-        self._option = option
         self._total_votes_for = total_votes_for
         self._vote_proportion_percent = vote_proportion_percent
 
@@ -50,29 +54,6 @@ class OptionResults(Model):
         :rtype: OptionResults
         """
         return util.deserialize_model(dikt, cls)
-
-    @property
-    def option(self) -> Option:
-        """Gets the option of this OptionResults.
-
-
-        :return: The option of this OptionResults.
-        :rtype: Option
-        """
-        return self._option
-
-    @option.setter
-    def option(self, option: Option):
-        """Sets the option of this OptionResults.
-
-
-        :param option: The option of this OptionResults.
-        :type option: Option
-        """
-        if option is None:
-            raise ValueError("Invalid value for `option`, must not be `None`")  # noqa: E501
-
-        self._option = option
 
     @property
     def total_votes_for(self) -> float:
